--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Step 1 - Checkout Repository from GitHub      
         uses: actions/checkout@v2
 
-      - name: Step 2 - Gradle wrapper version validation
-        uses: gradle/wrapper-validation-action@v1
+      #- name: Step 2 - Gradle wrapper version validation
+       # uses: gradle/wrapper-validation-action@v1
       
       - name: Step 3 - Use Java version 17
         uses: actions/setup-java@v2
